src/Container/Dashboard/MyBills/MyBills.css
body{margin:0;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif;font-size:1rem;font-weight:400;line-height:1.5;color:#212529;text-align:left;background-color:#fff}
.bills{
    display: block;
    margin-left: 30%;
    padding-top: 8%;
}
.each-bill{
    min-width: 500px;
    border: 1px solid #d8d8d8;
    margin: 3%;
    border-radius: 15px;
    padding: 5px;
}

.bill-item{
    padding: 2px;
    border-collapse: collapse; 
    border:none; }

.bill-item:nth-child(even) {background-color: #f2f2f2;}

